@@ -9,7 +9,7 @@ fi
 # Exit on Error of command immediately
 set -e
 
-CLASSPATH=$ADEMPIERE_HOME/lib/jp.osdn.ocra.jar:$ADEMPIERE_HOME/lib/jp.osdn.ocrb.jar:$ADEMPIERE_HOME/lib/de.metas.endcustomer.mf15.swingui-allInOne.jar
+CLASSPATH=${runner.sh.classpath}
 
 echo "CLASSPATH = $CLASSPATH"
 
@@ -19,15 +19,15 @@ if [ $JAVA_HOME ]; then
 else
   JAVA=java
   echo JAVA_HOME is not set.
-  echo   You may not be able to start Adempiere
+  echo   You may not be able to start metasfresh
   echo   Set JAVA_HOME to the directory of your local JDK.
 fi
 
-# NOTE: line is commented out because we want to allow developers to specify their own "REMOTE_DEBUG_OPTS" before running Adempiere... so they can remote debug 
+# NOTE: line is commented out because we want to allow developers to specify their own "REMOTE_DEBUG_OPTS" before running metasfresh... so they can remote debug 
 #REMOTE_DEBUG_OPTS=
 #REMOTE_DEBUG_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8788"
 
-# To switch between multiple installs, copy the created Adempiere.properties file
+# To switch between multiple installs, copy the created metasfresh.properties file
 # Select the configuration by setting the PROP variable
 #PROP=-DPropertyFile=test.properties
 #Default:
@@ -38,6 +38,6 @@ fi
 #  SECURE=-DADEMPIERE_SECURE=org.compiere.util.Secure
 SECURE=
 
-#Note that -Djava.util.Arrays.useLegacyMergeSort=true is related to task "07072 Comparison method violates its general contract (100965620270)"
-$JAVA -Xms32m -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError $REMOTE_DEBUG_OPTS -Djava.util.Arrays.useLegacyMergeSort=true -DADEMPIERE_HOME=$ADEMPIERE_HOME $PROP $SECURE -classpath $CLASSPATH org.compiere.Adempiere
+JAVA_OPTS=${runner.java.options}
+$JAVA $JAVA_OPTS $REMOTE_DEBUG_OPTS -DADEMPIERE_HOME=$ADEMPIERE_HOME $PROP $SECURE -classpath $CLASSPATH ${spring.jarLauncherClass}
 
